package NKikimrColumnShardExportProto;

message TCursor {
    optional string LastKey = 1;
    optional bool Finished = 2;
}
